<?xml version="1.0"?>
<package format="2">
  <name>sensor_drivers</name>
  <version>0.0.1</version>
  <description>The sensor_drivers package</description>

  <author email="danieto98@gmail.com">Daniel Nieto</author>
  <maintainer email="danieto98@gmail.com">Daniel Nieto</maintainer>

  <license>TODO</license>

  <depend>rospy</depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
