<?xml version="1.0"?>
<package format="2">
  <name>sensor_drivers</name>
  <version>0.0.1</version>
  <description>ROS drivers for a low-cost sensor suite connected to an Arduino UNO.</description>

  <author email="danieto98@gmail.com">Daniel Nieto</author>
  <maintainer email="danieto98@gmail.com">Daniel Nieto</maintainer>

  <license>TODO</license>

  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
